Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24323

CDB Debugger does not start: "File not allowed to be loaded - qtcreatorcdbext.exe"

XMLWordPrintable

    • Windows
    • 6dc4160a4 (10.0)

      The latest snapshot cannot start the cdb debugger.

       ************* Path validation summary **************
       Response                         Time (ms)     Location
       Error                                          ""
       Deferred                                       symsrv*symsrv.dll*C:\Windows\Symbols*http://msdl.microsoft.com/download/symbols
       Symbol search path is: "";symsrv*symsrv.dll*C:\Windows\Symbols*http://msdl.microsoft.com/download/symbols
       Executable search path is: 
       Module loaded: qtcreator.exe
       Module loaded: ntdll.dll
       Module loaded: ntdll.dll
       Module loaded: C:\WINDOWS\System32\wow64.dll
       Module loaded: C:\WINDOWS\System32\wow64win.dll
       (14c4.3154): Break instruction exception - code 80000003 (first chance)
       ntdll!LdrInitShimEngineDynamic+0x360:
       00007ffd`326ff780 cc              int     3
       cdb: Reading initial command '.idle_cmd !qtcreatorcdbext.idle'
       Execute when idle: !qtcreatorcdbext.idle
       0:000>
       SECURE: File not allowed to be loaded - C:\Qt\standalone_installs\qtcreator-4.13\lib\qtcreatorcdbext64\qtcreatorcdbext.dll
       Error code: Win32 error 0n5
      

        1. fulllog.txt
          11 kB
        2. HappenedAgain.png
          HappenedAgain.png
          339 kB
        3. image-2020-07-08-18-31-34-975.png
          image-2020-07-08-18-31-34-975.png
          85 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes