Debugger: Add warning if cdb prevents loading of cdbext

This happens from time to time, but I do not have a way to reproduce it
safely. In order to present the user a somewhat usable state after this
error cancel the debug run and show a message box with potential fixes.

Fixes: QTCREATORBUG-24323
Change-Id: I7e557001bd5dfb3b0abb19fa635bf2d20bb3b16c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>